Change frontend dependency installation to be done with npm instead of yarn.

--- a/provisioning/roles/frontend/tasks/main.yml
+++ b/provisioning/roles/frontend/tasks/main.yml
@@ -3,8 +3,8 @@
   become: no
   tags: deploy
 
-- name: yarn install (this takes some time)
-  local_action: command yarn install --force chdir={{ frontend_temp_path }}
+- name: npm install (this takes some time)
+  local_action: command npm install --force chdir={{ frontend_temp_path }}
   become: no
   tags: deploy
 
